# Hep-Diff-Mining

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  run_pipeline.py
data_layer/: database.py  ena_client.py  expression_integrator.py  fetch_supplements.py  gene_panel.py  geo_linker.py  geo_matrix_fetcher.py  geo_sample_mapper.py  grounding.py  mesh_aliases.json  reference_graph.py  supplement_expression_parser.py  supplement_processor.py  xml_to_text.py
data_layer/pmc/: fetch_pmc_xmls.py  pmc_client.py
examples/: PMC10033665.xml  PMC4894932.xml
llm/agents/: agentic_extractor.py  review_extractor.py  triage_classifier.py
llm/agents/prompts/: extraction_pass1.txt  extraction_pass2.txt  extraction_pass3.txt  geo_sample_mapping.txt  review_extraction.txt  rnaseq_extraction.txt  triage_system.txt
llm/openrouter/: client.py
scripts/: audit.py  manual_fetch.py  readout_analysis.py  supplement_enrich.py
steps/: __init__.py  export_results.py  ground_accessions.py  grounding_cleanup.py  rnaseq_crossref.py  rnaseq_extract.py  rnaseq_integrate.py  rnaseq_retrieve.py
tests/: conftest.py  test_database.py  test_reference_graph.py  test_supplement_processor.py  test_tools.py  test_xml_to_text.py
tools/: __init__.py  fetch_reference.py  flag_incomplete.py  search_corpus.py
